# TerraNova

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_STEPS.md  Dockerfile  GITHUB_DEPLOYMENT.md  README.md  SETUP.md  deploy.py  deployment_trigger.txt  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run_app.py  serve_frontend.py  start_app.bat  test_api.py  test_backend.py  vercel.json
.github/workflows/: deploy.yml
backend/: main.py  requirements.txt  schemas.py
backend/routers/: city.py  planner.py  upload.py  visualize.py
backend/schemas/: city.py  planner.py  upload.py
backend/services/: map_generator.py  planner.py  tiles.py  visualization.py
backend/tests/: test_city.py
backend/utils/: config.py  error_handlers.py  file_handler.py
frontend/: app.py  index.html  manifest.json  map-style.css  script.js  style.css
generated_maps/: TerraNova_map.html
static/: visual_map.html
